# Email_Campaign_Automation

./: Dockerfile  QUICK_REFERENCE.md  README_NEW.md  README_NO_DOCKER.md  README_OLD.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh
app/cli/: main.py
app/config/: settings.py
app/db/: client.py  dao_accounts.py  dao_activities.py  dao_campaigns.py  dao_leads.py  dao_runtime.py  dao_sequences.py  dao_templates.py  indexes.py
app/domain/: arbiter.py  dispatcher.py  errors.py  scheduling.py  templating.py  transport.py  utils_time.py  worker.py
app/tests/: test_arbiter.py  test_due_leads.py  test_scheduling.py  test_templating.py  test_worker_batch.py
